--- a/examples/radio/radio-1/radio-1.html
+++ b/examples/radio/radio-1/radio-1.html
@@ -11,7 +11,7 @@
     <script src="../../js/highlight.pack.js"></script>
     <script src="../../js/app.js"></script>
 
-    <link rel="stylesheet" href="../css/radio.css">
+    <link rel="stylesheet" href="css/radio.css">
     <script src="js/radioGroup.js" type="text/javascript"></script>
     <script src="js/radioButton.js" type="text/javascript"></script>
 
@@ -243,7 +243,7 @@
       <section>
         <h2>Javascript and CSS Source Code</h2>
         <ul>
-            <li>CSS: <a href="../css/radio.css" type="tex/css">radio.css</a></li>
+            <li>CSS: <a href="css/radio.css" type="tex/css">radio.css</a></li>
             <li>Javascript: <a href="js/radioGroup.js" type="text/javascript">radioGroup.js</a></li>
             <li>Javascript: <a href="js/radioButton.js" type="text/javascript">radioButton.js</a></li>
         </ul>
