--- a/examples/dialog-modal/dialog.html
+++ b/examples/dialog-modal/dialog.html
@@ -5,14 +5,17 @@
 <title>Modal Dialog Example | WAI-ARIA Authoring Practices 1.1</title>
 
 <!--  Core js and css shared by all examples; do not modify when using this template. -->
+<link rel="stylesheet" href="https://www.w3.org/StyleSheets/TR/2016/base.css">
 <link href="../css/core.css" rel="stylesheet">
 <link href="../css/table.css" rel="stylesheet">
 <script src="../js/examples.js" type="text/javascript"></script>
-<script src="../js/utils.js" type="text/javascript"></script>
+<script src="../js/highlight.pack.js"></script>
 
 <!--  js and css for this example. -->
 <link href="css/dialog.css" rel="stylesheet">
+<script src="../js/utils.js" type="text/javascript"></script>
 <script src="js/dialog.js" type="text/javascript"></script>
+
 </head>
 <body>
   <main>
@@ -226,7 +229,7 @@
 
 <section>
     <h2 id="kbd_label">Keyboard Support</h2>
-    <table aria-labelledby="kbd_label">
+    <table aria-labelledby="kbd_label" class="def">
       <thead>
         <tr>
           <th>Key</th>
@@ -258,7 +261,7 @@
 
   <section>
     <h2 id="rps_label">Role, Property, State, and Tabindex  Attributes</h2>
-    <table aria-labelledby="rps_label">
+    <table aria-labelledby="rps_label" class="data attributes">
       <thead>
         <tr>
           <th scope="col">Role</th>
