--- a/examples/menu-button/menu-button-actions.html
+++ b/examples/menu-button/menu-button-actions.html
@@ -20,6 +20,11 @@
     <main>
       <h1>Actions Menu Button Example Using <code>element.focus()</code></h1>
       <p>
+        <strong>Note:</strong> This example has been significantly revised.
+        Please provide feedback in 
+        <a href="https://github.com/w3c/aria-practices/issues/382">issue 382.</a>
+      </p>
+      <p>
         This example demonstrates how the   
         <a href="../../#menubutton">menu button design pattern</a>
       can be used to create a button that opens an actions menu.
