--- a/examples/menu-button/menu-button-links.html
+++ b/examples/menu-button/menu-button-links.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <title>Menu Button Example: Links | WAI-ARIA Authoring Practices 1.1</title>
+    <title>Navigation Menu Button Example | WAI-ARIA Authoring Practices 1.1</title>
 
     <!--  Core js and css shared by all examples; do not modify when using this template. -->
     <link rel="stylesheet" href="https://www.w3.org/StyleSheets/TR/2016/base.css">
@@ -11,6 +11,7 @@
     <script src="../js/highlight.pack.js"></script>
     <script src="../js/app.js"></script>
 
+    <!--  JS and CSS for this example -->
     <link href="css/MenubuttonLinks.css" rel="stylesheet">
     <script src="js/Menubutton2.js" type="text/javascript"></script>
     <script src="js/PopupMenuLinks.js" type="text/javascript"></script>
@@ -20,15 +21,29 @@
     <main>
       <h1>Navigation Menu Button Example</h1>
       <p>
-        This example implements the <a href="../../../#menubutton">menu button design pattern</a>
-        for a button that provides access to a menu of link targets.
-      An ARIA menu button is defined as any element with <code>role=&quot;button&quot;</code> with an <code>aria-haspopup=&quot;true&quot;</code>.
-      In this example the default role of link for the <code>a</code> element is overridden using <code>role="button"</code> to define the menu button.  It is also important to note in the popup menu that the <code>role=menuitem</code> is on the
-      <code>a</code> element and not the <code>li</code> element, since a <code>menuitem</code> widget cannot contain any intereactive elements (e.g links).</p>
+        <strong>Note:</strong> This example has been significantly revised.
+        Please provide feedback in 
+        <a href="https://github.com/w3c/aria-practices/issues/384">issue 384.</a>
+      </p>
+      <p>
+        This example demonstrates the  
+        <a href="../../#menubutton">menu button design pattern</a>
+        for a button that displays a menu of link targets.
+        The menu items are made from HTML links and maintain their HTML link behaviors.
+        That is, activating a menuitem loads the link target, and the browser's link context menu and associated actions are available.
+      </p>
+      <p>
+        In this implementation, the button is made using an HTML <code>a</code> element and the menu structure uses an HTML <code>ul</code> element.
+        The <code>menuitem</code> role is on the HTML <code>a</code> element contained by each <code>li</code> element so link behaviors are available when focus is set on the menu item.
+        Another reason the <code>menuitem</code> role is not on the <code>li</code> element is that the semantics of descendants of ARIA <code>menuitem</code> elements are not exposed in the accessibility tree.
+        That is, an item in a menu can only be a <code>menuitem</code> because accessibility APIs do not enable assistive technologies to render elements contained inside of an item in a menu.
+        For a more detailed description of this constraint, see 
+        <a href="../../#children_presentational">Roles That Automatically Hide Semantics by Making Their Descendants Presentational.</a>
+      </p>
       <p>Similar examples include: </p>
       <ul>
-        <li><a href="menu-button-actions.html">Action Menu Button</a>: The popup menu items can be used to activate actions in a web application.</li>
-        <li><a href="menu-button-actions-active-descendant.html">Action Menu Button (aria-acivedescendant)</a>: The popup menu items can be used to activate actions in a web application.</li>
+        <li><a href="menu-button-actions.html">Action Menu Button Example Using element.focus()</a>: A button that opens a menu of actions or commands where focus in the menu is managed using <code>element.focus()</code>.</li>
+        <li><a href="menu-button-actions-active-descendant.html">Action Menu Button Example Using aria-activedescendant</a>: A button that opens a menu of actions or commands where focus in the menu is managed using aria-activedescendant.</li>
       </ul>
       <section>
         <h2 id="ex_label">Example</h2>
@@ -89,16 +104,12 @@
             </div>
           </div>
         </div>
-
         <div role="separator" id="ex_end_sep" aria-labelledby="ex_end_sep ex_label" aria-label="End of"></div>
-
       </section>
 
       <section>
         <h2 id="kbd_label">Keyboard Support</h2>
-
         <h3 id="kbd1_label">Menu Button</h3>
-
         <table aria-labelledby="kbd1_label kbd_label" class="def">
           <thead>
             <tr>
@@ -108,18 +119,16 @@
           </thead>
           <tbody>
             <tr>
-              <th><kbd>Down Arrow, <br/>Space, <br/>or Enter</kbd></th>
+              <th><kbd>Down Arrow</kbd><br><kbd>Space</kbd><br><kbd>Enter</kbd></th>
               <td>Open <code>menu</code> and move focus to first <code>menuitem</code></td>
             </tr>
             <tr>
               <th><kbd>Up Arrow</kbd></th>
-              <td>Open <code>menu</code> and move focus to previous <code>menuitem</code></td>
+              <td>Open <code>menu</code> and move focus to last <code>menuitem</code></td>
             </tr>
           </tbody>
         </table>
-
-         <h3 id="kbd2_label" class="widget">Popup Menu</h3>
-
+         <h3 id="kbd2_label" class="widget">Menu</h3>
         <table aria-labelledby="kbd2_label kbd_label" class="def">
           <thead>
             <tr>
@@ -129,10 +138,12 @@
           </thead>
           <tbody>
             <tr>
-              <th><kbd>Space or Enter</kbd></th>
+              <th><kbd>Space</kbd><br><kbd>Enter</kbd></th>
               <td>
                 <ul>
-                  <li>Activates the link asociated with the <code>menuitem</code>.</li>
+                                    <li>Closes the menu.</li>
+                                    <li>Sets focus on the menu button</li>
+                                    <li>Activates the menu item, which is equivalent to activating the link element from which the menu item is made.</li>
                 </ul>
               </td>
             </tr>
@@ -140,8 +151,8 @@
               <th><kbd>Escape</kbd></th>
               <td>
                 <ul>
-                  <li>Closes popup menu.</li>
-                  <li>Moves focus to button menu.</li>
+                  <li>Closes the menu.</li>
+                  <li>Sets focus to the menu button.</li>
                 </ul>
               </td>
             </tr>
@@ -149,8 +160,8 @@
               <th><kbd>Up Arrow</kbd></th>
               <td>
                 <ul>
-                  <li>Moves focus to previous popup menu item.</li>
-                  <li>If first popup menu item, focus is moved to the last popup menu item.</li>
+                  <li>Moves focus to the previous menu item.</li>
+                  <li>If focus is on the first menu item, moves focus to the last menu item.</li>
                 </ul>
               </td>
             </tr>
@@ -158,33 +169,25 @@
               <th><kbd>Down Arrow</kbd></th>
               <td>
                 <ul>
-                  <li>Moves focus to next popup menu item.</li>
-                  <li>If last popup menu item, focus is moved to the first popup menu item.</li>
+                  <li>Moves focus to the next menu item.</li>
+                  <li>If focus is on the last menu item, moves focus to the first menu item.</li>
                 </ul>
               </td>
             </tr>
             <tr>
               <th><kbd>Home</kbd></th>
-              <td>
-                <ul>
-                  <li>Moves focus to first popup menu item.</li>
-                </ul>
-              </td>
+              <td>Moves focus to the first menu item.</td>
             </tr>
             <tr>
               <th><kbd>End</kbd></th>
-              <td>
-                <ul>
-                  <li>Moves focus to last popup menu item.</li>
-                </ul>
-              </td>
+              <td>Moves focus to the last menu item.</td>
             </tr>
             <tr>
-              <th><kbd>A-Z, a-z</kbd></th>
+              <th><kbd>A-Z</kbd><br><kbd>a-z</kbd></th>
               <td>
                 <ul>
-                  <li>Moves focus to the next popup item that starts with that letter.</li>
-                  <li>If no popup menu item starts with the letter, focus does not move.</li>
+                  <li>Moves focus to the next menu item with a lable that starts with the typed character if such an menu item exists.</li>
+                  <li>Otherwise, focus does not move.</li>
                 </ul>
               </td>
             </tr>
@@ -194,9 +197,7 @@
 
      <section>
         <h2 id="rps_label">Role, Property, State, and Tabindex  Attributes</h2>
-
-        <h3 id="rps1_label">Menu Button Widget</h3>
-
+        <h3 id="rps1_label">Menu Button</h3>
         <table aria-labelledby="rps1_label rps_label" class="data attributes">
           <thead>
             <tr>
@@ -217,79 +218,56 @@
               </td>
               <td>
                 <ul>
-                  <li>The <code>role=&quot;button&quot;</code> overrides the default role of <code>link</code> for an <code>a</code> element and identifies the element as a ARIA <code>buton</code> widget.</li>
-                  <li>The accessible name comes from the child text content of the <code>a</code> element (e.g. &quot;WAI-ARIA Quick Links&quot;).</li>
-                  <li>The <code>a[href=&quot;#&quot;]</code> element is a part of the default tab order of the page, so <em>no</em> need to set <code>tabindex</code>.</li>
+                  <li>Identifies the element as a button.</li>
+                  <li>The text content of the <code>a</code> element provides the accessible name of the button.</li>
                 </ul>
               </td>
             </tr>
             <tr>
-              <td>
-                <code></code>
-              </td>
-              <th scope="row"><code>href=&quot;#&quot;</code></th>
-              <td>
-                <code>a</code>
-              </td>
-              <td>
-                <ul>
-                  <li>Setting <code>href=&quot;#&quot;</code> will insure the <code>a</code> element will be part of the default tab order of the page.</li>
-                </ul>
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <code></code>
-              </td>
+              <td></td>
               <th scope="row"><code>aria-haspopup=&quot;true&quot;</code></th>
               <td>
                 <code>a</code>
               </td>
               <td>
                 <ul>
-                  <li>The <code>aria-haspopup</code> attribute defines an element with <code>role=button</code> as a ARIA menu button design pattern and indicates the actions of the button are to open and close the popup menu.</li>
+                  <li>Indicates the button opens a menu.</li>
+                  <li>
+                    <strong>NOTE:</strong> While ARIA does not include a role specifically for menu buttons, most platform accessibility APIs include a menubutton role.
+                    Consequently, on such platforms, assistive technologies, such as screen readers, identify buttons that have <code>aria-haspopup</code> set to either <code>true</code> or <code>menu</code> as menu buttons.
+                  </li>
                 </ul>
               </td>
             </tr>
             <tr>
-              <td>
-                <code></code>
-              </td>
+              <td></td>
               <th scope="row"><code>aria-controls=&quot;IDREF&quot;</code></th>
               <td>
                 <code>a</code>
               </td>
               <td>
                 <ul>
-                  <li>The <code>aria-controls</code> attribute serves as a pointer to the the popup menu that is controlled by the menu button.</li>
+                  <li>Refers to the menu element controlled by the menu button.</li>
+                  <li>Optional attribute: assistive technology users can operate the menu if not present.</li>
                 </ul>
               </td>
             </tr>
             <tr>
                 <td></td>
                 <th scope="row"><code>aria-expanded=&quot;true&quot;</code></th>
-                <td><code>button</code></td>
+                <td><code>a</code></td>
                 <td>
                   <ul>
-                    <li>The <code>aria-expanded</code> attribute with the value <code>true</code> is added when the menu is open.</li>
-                  </ul>
-                </td>
-            </tr>
-            <tr>
-                <td></td>
-                <th scope="row"><code>aria-expanded</code></th>
-                <td><code>button</code></td>
-                <td>
-                  <ul>
+                    <li>Added when the menu is open.</li>
+                    <li>Indicates that the menu is displayed and that activating the menu button closes the menu.</li>
                     <li>The <code>aria-expanded</code> attribute is removed when the menu is closed.</li>
+                    <li>Included to support touch devices where screen reader users can touch the menu button when the menu is displayed. Keyboard users cannot focus the menu button when the menu is open.</li>  
                   </ul>
                 </td>
             </tr>
           </tbody>
         </table>
-
-        <h3 id="rps2_label">Popup Menu Widget</h3>
-
+        <h3 id="rps2_label">Menu</h3>
         <table aria-labelledby="rps2_label rps_label" class="data attributes">
           <thead>
             <tr>
@@ -308,55 +286,20 @@
               <td>
                 <code>ul</code>
               </td>
-              <td>
-                <ul>
-                  <li>The <code>role=&quot;menu&quot;</code> attribute identifies the <code>ul</code> element as an ARIA <code>menu</code> widget.</li>
-                  <li>Accessible name for the <code>menu</code> widget comes from <code>aria-labelledby</code> attribute.</li>
-                  <li>The <code>menu</code> widget does not need a <code>tabindex</code> value, since the <code>ul[role&quot;menu&quot;]</code> element never receives keyboard focus.</li>
-                </ul>
-              </td>
+              <td>Identifies the <code>ul</code> element as a <code>menu</code>.</td>
             </tr>
             <tr>
-              <th scope="row">
+              <td>
                 <code></code>
-              </th>
-              <td><code>aria-labelledby=&quot;[IDREF]&quot;</code></td>
+              </td>
+              <th scope="row"><code>aria-labelledby=&quot;IDREF&quot;</code></th>
               <td>
                 <code>ul</code>
               </td>
               <td>
                 <ul>
-                  <li>Pointer to element with the corresponding <code>id=&quot;[IDREF]&quot;</code> that defines the accessible name for the <code>menu</code>, in this example &quot;Actions&quot;.</li>
-                </ul>
-              </td>
-            </tr>
-            <tr>
-              <th scope="row">
-                <code>menuitem</code>
-              </th>
-              <td></td>
-              <td>
-                <code>a</code>
-              </td>
-              <td>
-                <ul>
-                  <li>The <code>role=&quot;menuitem&quot;</code> attribute overrides the default <code>link</code> role of the <code>a</code> element.</li>
-                  <li>Accessible name for the <code>menuitem</code> widget comes from child text content of the <code>a</code> element.</li>
-                  <li>The <code>menuitem</code> widget has <code>tabindex=&quot;-1&quot;</code>.</li>
-                </ul>
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <code></code>
-              </td>
-              <th scope="row"><code>tabindex=&quot;-1&quot;</code></th>
-              <td>
-                <code>a</code>
-              </td>
-              <td>
-                <ul>
-                  <li>Identifies the link (e.g. <code>a[role=menuitem]</code>) as an interactive element on the page, but removes the link from the tab order of the page.</li>
+                  <li>Refers to the element that contains the accessible name for the <code>menu</code>.</li>
+                  <li>The menu is labeled by the menu button.</li>
                 </ul>
               </td>
             </tr>
@@ -370,14 +313,36 @@
               </td>
               <td>
                 <ul>
-                  <li>Hides <code>li</code> element native role semantics of <code>listiem</code> from assistive technologies.</li>
-                  <li>If native role semantics of the <code>li</code> element are not removed, it could confuse some users of assistive technologies since listitems and menuitems would be interspersed with each other.</li>
+                  <li>Hides the implied <code>listitem</code> role of the <code>li</code> element from assistive technologies.</li>
+                  <li>For more details, see <a href="presentation_role">Intentionally Hiding Semantics with the <code>presentation</code> Role</a>.</li> 
                 </ul>
               </td>
             </tr>
+            <tr>
+              <th scope="row">
+                <code>menuitem</code>
+              </th>
+              <td></td>
+              <td>
+                <code>a</code>
+              </td>
+              <td>
+                <ul>
+                  <li>Identifies the element as a <code>menuitem</code>.</li>
+                  <li>The text content of the <code>a</code> element provides the accessible name of the <code>menuitem</code>.</li>
+                </ul>
+              </td>
+            </tr>
+            <tr>
+              <td></td>
+              <th scope="row"><code>tabindex=&quot;-1&quot;</code></th>
+              <td>
+                <code>a</code>
+              </td>
+              <td>removes the <code>a</code> element from the page tab sequence but keeps it focusable with JavaScript.</td>
+            </tr>
           </tbody>
         </table>
-
       </section>
 
       <section>
@@ -385,7 +350,7 @@
 
         <ul>
           <li>CSS: <a href="css/menubuttonLinks.css" type="text/css">MenubuttonLinks.css</a></li>
-          <li>Javascript: <a href="js/Menubutton.js" type="text/javascript">Menubutton.js</a></li>
+          <li>Javascript: <a href="js/Menubutton2.js" type="text/javascript">Menubutton2.js</a></li>
           <li>Javascript: <a href="js/MenuItemLinks.js" type="text/javascript">MenuItemLinks.js</a></li>
           <li>Javascript: <a href="js/PopupMenuLinks.js" type="text/javascript">PopupMenuLinks.js</a></li>
         </ul>
